<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paulo.am.MainActivity">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView"
        android:src="@mipmap/logo"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblLogo"
        android:id="@+id/textView"
        android:textSize="35dp"
        android:fontFamily="time"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView3" />

    <ImageView
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:id="@+id/imageView2"
        android:src="@mipmap/imc"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView4"
        android:onClick="chamarCalculoImc" />

    <ImageView
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:id="@+id/imageView3"
        android:src="@mipmap/batimentos"
        android:cropToPadding="false"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/imageView4"
        android:onClick="batimentos" />

    <ImageView
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:id="@+id/imageView4"
        android:src="@mipmap/sair"
        android:cropToPadding="false"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btnCalcularImc"
        android:id="@+id/lblIMC"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/btnBatimentos"
        android:id="@+id/lblBatimentos"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_alignTop="@+id/lblIMC"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblSair"
        android:id="@+id/lblSair"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
