<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paulo.am.ImcActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblTituloIMC"
        android:id="@+id/lblTituloIMC"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblPeso"
        android:id="@+id/lblPeso"
        android:layout_above="@+id/edtAltura"
        android:layout_alignStart="@+id/lblAltura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblAltura"
        android:id="@+id/lblAltura"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/imageView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtPeso"
        android:textSize="30dp"
        android:layout_above="@+id/edtAltura"
        android:layout_alignStart="@+id/lblResultadoIMC"
        android:layout_alignEnd="@+id/lblTituloIMC" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/edtAltura"
        android:layout_alignBottom="@+id/lblAltura"
        android:layout_alignStart="@+id/edtPeso"
        android:layout_alignEnd="@+id/edtPeso"
        android:textSize="30dp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/lblResultadoIMC"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/lblTituloIMC"
        android:layout_alignStart="@+id/imageView5" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="112dp"
        android:id="@+id/imageView5"
        android:src="@mipmap/calcular"
        android:layout_above="@+id/lblResultadoIMC"
        android:layout_centerHorizontal="true"
        android:onClick="calcularIMC" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView6"
        android:src="@mipmap/imc"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
